--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Crown Official - Home</title>
-	<link rel="icon" href="img/Fevicon.png" type="image/png">
+	<link rel="icon" href="images/Fevicon.png" type="image/png">
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="vendors/themify-icons/themify-icons.css">
@@ -27,7 +27,7 @@
     <div class="main_menu">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+          <a class="navbar-brand logo_h" href="index.html"><img src="images/logo.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="icon-bar"></span>
@@ -117,7 +117,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product1.png" alt="">
+                <img class="card-img" src="images/product/product1.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -132,7 +132,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product2.png" alt="">
+                <img class="card-img" src="images/product/product2.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -147,7 +147,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product3.png" alt="">
+                <img class="card-img" src="images/product/product3.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -162,7 +162,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product4.png" alt="">
+                <img class="card-img" src="images/product/product4.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -177,7 +177,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product5.png" alt="">
+                <img class="card-img" src="images/product/product5.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -192,7 +192,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product6.png" alt="">
+                <img class="card-img" src="images/product/product6.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -207,7 +207,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product7.png" alt="">
+                <img class="card-img" src="images/product/product7.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -222,7 +222,7 @@
           <div class="col-md-6 col-lg-4 col-xl-3">
             <div class="card text-center card-product">
               <div class="card-product__img">
-                <img class="card-img" src="img/product/product8.png" alt="">
+                <img class="card-img" src="images/product/product8.png" alt="">
                 <ul class="card-product__imgOverlay">
                   <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                   <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -250,7 +250,7 @@
         <div class="owl-carousel owl-theme" id="bestSellerCarousel">
           <div class="card text-center card-product">
             <div class="card-product__img">
-              <img class="img-fluid" src="img/brands/brand1.png" alt="">
+              <img class="img-fluid" src="images/brands/brand1.png" alt="">
               <ul class="card-product__imgOverlay">
                 <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                 <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -261,7 +261,7 @@
 
           <div class="card text-center card-product">
             <div class="card-product__img">
-              <img class="img-fluid" src="img/brands/brand2.png" alt="">
+              <img class="img-fluid" src="images/brands/brand2.png" alt="">
               <ul class="card-product__imgOverlay">
                 <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                 <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -272,7 +272,7 @@
 
           <div class="card text-center card-product">
             <div class="card-product__img">
-              <img class="img-fluid" src="img/brands/brand3.png" alt="">
+              <img class="img-fluid" src="images/brands/brand3.png" alt="">
               <ul class="card-product__imgOverlay">
                 <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                 <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -283,7 +283,7 @@
 
           <div class="card text-center card-product">
             <div class="card-product__img">
-              <img class="img-fluid" src="img/brands/brand4.png" alt="">
+              <img class="img-fluid" src="images/brands/brand4.png" alt="">
               <ul class="card-product__imgOverlay">
                 <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                 <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -294,7 +294,7 @@
 
           <div class="card text-center card-product">
             <div class="card-product__img">
-              <img class="img-fluid" src="img/brands/brand5.png" alt="">
+              <img class="img-fluid" src="images/brands/brand5.png" alt="">
               <ul class="card-product__imgOverlay">
                 <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                 <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
@@ -305,7 +305,7 @@
 
           <div class="card text-center card-product">
             <div class="card-product__img">
-              <img class="img-fluid" src="img/brands/brand6.png" alt="">
+              <img class="img-fluid" src="images/brands/brand6.png" alt="">
               <ul class="card-product__imgOverlay">
                 <li><a class="shopee-btn" href="https://shopee.ph/crown.official" target=”_blank”></a></li>
                 <li><a class="lazada-btn" href="https://lazada.com.ph/shop/crown-sakura/" target=”_blank”></a></li>
