--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li class="nav-item active"><a class="nav-link" href="#home">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="#products">Products</a></li>
               <li class="nav-item"><a class="nav-link" href="#brands">Brands</a></li>
-              <li class="nav-item"><a class="nav-link" href="#contactus">Subscribe</a></li>
+              <li class="nav-item"><a class="nav-link" href="#subscribe">Subscribe</a></li>
               <li class="nav-item"><a class="nav-link" href="#contactus">Contact</a></li>
             </ul>
 
@@ -324,7 +324,7 @@
    
    
     <!-- ================ Subscribe section start ================= --> 
-    <section class="subscribe-position" id="contactus">
+    <section class="subscribe-position" id="subscribe">
       <div class="container">
 		<div class="section-intro pb-60px">
           <h2>Follow us on <span class="section-intro__style">Facebook</span></h2>
@@ -342,7 +342,7 @@
 
 
   <!--================ Start footer Area  =================-->	
-	<footer class="footer">
+	<footer class="footer" id="contactus">
 		<div class="footer-area">
 			<div class="container">
 				<div class="row section_gap">
@@ -361,7 +361,7 @@
 								<li><a href="#home">Home</a></li>
 								<li><a href="#products">Products</a></li>
 								<li><a href="#brands">Brands</a></li>
-								<li><a href="#contactus">Subscribe</a></li>
+								<li><a href="#subscribe">Subscribe</a></li>
 								<li><a href="#contactus">Contact</a></li>
 							</ul>
 						</div>
